<resources>
    <string name="app_name">Emotion Tracker</string>
    <string name="how_you_feel_now">Что вы сейчас чувствуете?</string>
    <string name="greeting">Привет!</string>
    <string name="angry">Злость</string>
    <string name="frustration">Досада</string>
    <string name="rage">Гнев</string>
    <string name="fear">Страх</string>
    <string name="anxiety">Тревога</string>
    <string name="horror">Ужас</string>
    <string name="surprise">Удивление</string>
    <string name="distraction">Отвлечение</string>
    <string name="astonishment">Изумление</string>
    <string name="sad">Грусть</string>
    <string name="blue">Печаль</string>
    <string name="grief">Горе</string>
    <string name="dislike">Неприязнь</string>
    <string name="disapproval">Неодобрение</string>
    <string name="disgust">Отвращение</string>
    <string name="anticipation">Предвосхищение</string>
    <string name="interest">Интерес</string>
    <string name="vigilance">Бдительность</string>
    <string name="joy">Радость</string>
    <string name="serenity">Безмятежность</string>
    <string name="delight">Восторг</string>
    <string name="trust">Доверие</string>
    <string name="approval">Одобрение</string>
    <string name="admiration">Восхищение</string>
    <string name="date">Текущая дата</string>
    <string name="description">Описание</string>
    <string name="light_level">Легкий уровень</string>
    <string name="middle_level">Средний уровень</string>
    <string name="hard_level">Сильный уровень</string>
    <string name="choice">Выбрать</string>
    <string name="add_note">Добавьте заметку</string>
    <string name="back">Назад</string>
    <string name="emotion">Эмоция</string>
    <string name="note_description">Напишите заметку, это поможет лучше понять ощущения и взглянуть на ситуацию со стороны. Можете ответить на вопросы:</string>
    <string name="list_point_1">• Какая ситуация на это повляила?</string>
    <string name="list_point_2">• Что я хочу сделать под влиянием этой эмоции?</string>
    <string name="list_point_3">• Какие мысли были в этот момент?</string>
    <string name="list_point_4">• Какие ощущения в теле она вызывает?</string>
    <string name="note_name">Заметка</string>
    <string name="ready">Готово</string>
    <string name="calendar">Календарь</string>
    <string name="save">Сохранить</string>
    <string name="save_date">Сохраненная дата</string>
    <string name="save_note">Сохраненная заметка</string>
    <string name="angry_description">Раздраженно-враждебное состояние</string>
    <string name="angry_light_description">Раздражение и неудовольствие из-за неудачи</string>
    <string name="angry_hard_description">Бурная реакция негодования. Желание разрушения и проявления агрессии</string>
    <string name="fear_description">Состояние, вызванное реальной или предполагаемой опасностьюе</string>
    <string name="fear_light_description">Ощущение неопределенности, ожидание неприятных событий</string>
    <string name="fear_hard_description">Сильный, всепоглощающий страх</string>
    <string name="surprise_description">Реакция на новое или неожиданное</string>
    <string name="surprise_light_description">Снижение концентрации и перенос внимания на что-то другое</string>
    <string name="surprise_hard_description">Крайняя степень удивления, вызывающая полную концентрацию на ситуации</string>
    <string name="sad_description">Неудовлетворенность в каких-либо аспектах жизни</string>
    <string name="sad_light_description">Спокойное переживание утраты, погруженность в себя</string>
    <string name="sad_hard_description">Интенсивное переживание глубокой утраты</string>
    <string name="dislike_description">Эмоциональное нежелание признавать или принять</string>
    <string name="dislike_light_description">Чувство неудовлетворенности чьими-то действиями или ситуацией</string>
    <string name="dislike_hard_description">Высшая степень неприязни, часто с физиологическими проявлениями</string>
    <string name="interest_description">Ожидание или готовность к чему-либо</string>
    <string name="interest_light_description">Проявление внимания к чему-то значимому</string>
    <string name="interest_hard_description">Концентрация внимания, готовность реагировать на ситуацию</string>
    <string name="joy_description">Внутреннее чувство удовлетворения и удовольстви</string>
    <string name="joy_light_description">Состояние умиротворения и гармонии</string>
    <string name="joy_hard_description">Сильный всплеск радостных чувств</string>
    <string name="trust_description">Уверенность в безопасности и благоприятности ситуации</string>
    <string name="trust_light_description">Признание ситуации хорошей и правильной</string>
    <string name="trust_hard_description">Позитивная реакция на талант, умения и красоту</string>
    <string name="choose_intensity">Выберите, пожалуйста, эмоцию</string>
</resources>