<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/intensive_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntensiveFragment">


    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal|top"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chosen_emotion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/emotion"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/emotion_description"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chosen_emotion" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emotion_description">

        <RadioButton
            android:id="@+id/lightLevel"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="top"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:contextClickable="true"
            android:elegantTextHeight="true"
            android:text="@string/light_level"
            android:textColor="@color/black"
            android:textScaleX="1" />

        <RadioButton
            android:id="@+id/middleLevel"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="top"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:contextClickable="true"
            android:elegantTextHeight="true"
            android:text="@string/middle_level"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/hardLevel"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="top"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:contextClickable="true"
            android:elegantTextHeight="true"
            android:text="@string/hard_level"
            android:textColor="@color/black" />
    </RadioGroup>

    <Button
        android:id="@+id/choice_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/corner_radius"
        android:backgroundTint="@color/trust"
        android:text="@string/choice"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/emotion_description"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>