<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_mood"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="6dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mood_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_date"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/mood_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:text="@string/emotion"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mood_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_note"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>