<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarFragment">

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="68dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/corner_radius"
        android:backgroundTint="@color/trust"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <TextView
        android:id="@+id/calendar_name"
        android:layout_width="316dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:paddingStart="60dp"
        android:text="@string/calendar"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button_back"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ready_note"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="fill_vertical"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/corner_radius"
        android:backgroundTint="@color/trust"
        android:text="@string/ready"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contextClickable="true"
        android:dateTextAppearance="@style/TextAppearance.AppCompat.Medium"
        android:selectedDateVerticalBar="@color/trust"
        android:selectedWeekBackgroundColor="@color/joy"
        android:weekDayTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar_name" />

</androidx.constraintlayout.widget.ConstraintLayout>